# TimedTyPAOL-Artifact

./: .gitignore  README.md  timed-typaol.cabal
